# StructureNotes

./: .gitignore  README.md  main.py  pyproject.toml
src/structured_notes/: __init__.py  analyzer.py  backtest.py  config.py  data_engine.py  models.py  pricer.py  visualizer.py
src/structured_notes/strategies/: __init__.py  autocallable.py  base.py  participation_rate.py  structured_note.py  worst_of.py
